fix: update environment variables and API base URL handling in frontend

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 CORS_ORIGINS=https://your-domain.com,http://your-domain.com
 
 # Frontend Build Configuration
+VITE_BASE_URL=https://your-domain.com
 VITE_BASE_PATH=/your-app-path/
-VITE_API_BASE_URL=/your-app-path/api
