--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,11 +7,10 @@ RUN npm ci
 
 COPY . .
 
-ARG VITE_BASE_PATH=/penzgtu-abitur/
-ARG VITE_API_BASE_URL=/penzgtu-abitur/api
-
+ARG VITE_BASE_URL
+ARG VITE_BASE_PATH
+ENV VITE_BASE_URL=$VITE_BASE_URL
 ENV VITE_BASE_PATH=$VITE_BASE_PATH
-ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 
 RUN npm run build
 
